[project]
name = "wlo-topic-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jason Mansour", email = "jason.mansour@gwdg.de" },
    { name = "Yovisto GmbH", email = "info@yovisto.com" }
]
requires-python = ">=3.11"
dependencies = [
    "cherrypy>=18.10.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "rdflib>=7.1.3",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=3.4.1",
    "treelib>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
